--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 https://www.roblox.com/users/2629843929/profile
-
+<br>
 https://discord.gg/a3eJFfaEyw
+<br>
+<img src="https://www.roblox.com/headshot-thumbnail/image?userId=2629843929&width=420&height=420&format=png" alt="Roblox Headshot">
+
