--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-https://www.roblox.com/users/2629843929/profile
-<br>
-https://discord.gg/a3eJFfaEyw
-<br>
-<img src="https://www.roblox.com/headshot-thumbnail/image?userId=2629843929&width=420&height=420&format=png" alt="Roblox Headshot">
-
+<h1 style="text-align:center;">bobscort</h1>
+<p>bobscort is a website owned by <a target="_blank" rel="noopener noreferrer" href="https://www.roblox.com/users/2629843929/profile">cat_givemyrobox</a> for store scripts and for other stuff to store things and its for EXPLOITING (and made in <a target="_blank" rel="noopener noreferrer" href="https://github.com/Suferr/bobscort">github</a> if u dont know)</p>
+<p>For more info go to:</p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://github.com/Suferr/bobscort">https://github.com/Suferr/bobscort</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/@1stCoder">https://www.youtube.com/@1stCoder</a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="https://discord.gg/a3eJFfaEyw">discord.gg/a3ejffaeyw</a></p>
