--- a/index.html
+++ b/index.html
@@ -4,3 +4,8 @@
 <p><a target="_blank" rel="noopener noreferrer" href="https://github.com/Suferr/bobscort">https://github.com/Suferr/bobscort</a></p>
 <p><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/@1stCoder">https://www.youtube.com/@1stCoder</a></p>
 <p><a target="_blank" rel="noopener noreferrer" href="https://discord.gg/a3eJFfaEyw">discord.gg/a3ejffaeyw</a></p>
+<figure class="image image-style-block-align-left image_resized" style="width:27.51%;" data-ckbox-resource-id="jSCmQr3-5gKW">
+    <picture>
+        <source srcset="https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/80.webp 80w,https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/160.webp 160w,https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/240.webp 240w,https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/320.webp 320w,https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/400.webp 400w,https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/446.webp 446w" sizes="(max-width: 446px) 100vw, 446px" type="image/webp"><img src="https://ckbox.cloud/d2cdf934b1d8b5858e70/assets/jSCmQr3-5gKW/images/446.png" width="446" height="356">
+    </picture>
+</figure>
