--- a/LibraryDocs.html
+++ b/LibraryDocs.html
@@ -9,37 +9,46 @@
     <style>
         body {
             font-family: 'Open Sans', sans-serif;
+            margin: 20px;
+            line-height: 1.6;
         }
         h2 {
             text-align: center;
+            font-size: 2rem;
+        }
+        p {
+            font-size: 1.2rem;
         }
         .editor-container {
             position: relative;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .editor {
             width: 100%;
-            height: 150px;
+            height: 200px; /* Increased height for better readability */
+            font-size: 16px; /* Scaled up the font size */
+        }
+        .ace_editor {
+            font-size: 16px; /* Ensures Ace Editor text scales with the container */
         }
         .copy-btn {
             position: absolute;
             top: 10px;
             right: 10px;
-            padding: 5px 10px;
-            background-color: #007bff;
-            color: #fff;
+            padding: 8px 12px;
+            background-color: #28a745;
+            color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 1rem;
         }
         .copy-btn:hover {
-            background-color: #0056b3;
+            background-color: #218838;
         }
     </style>
 </head>
 <body>
-    <p>&nbsp;</p>
     <h2>Bobscort Library Docs</h2>
 
     <p>1. Set up the library</p>
@@ -79,10 +88,11 @@
             editor.setTheme("ace/theme/monokai"); // Use Monokai theme
             editor.session.setMode("ace/mode/" + language);
             editor.setReadOnly(true); // Makes the editor read-only
-            editor.renderer.setShowGutter(false); // Hides line numbers if not needed
+            editor.renderer.setShowGutter(true); // Show line numbers for better clarity
             editor.setOptions({
+                fontSize: "16px", // Increases text size
                 highlightActiveLine: false,
-                showPrintMargin: false
+                showPrintMargin: false,
             });
         }
 
