--- a/LibraryDocs.html
+++ b/LibraryDocs.html
@@ -5,114 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bobscort Library Docs</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.13.1/ace.js"></script>
     <style>
         body {
             font-family: 'Open Sans', sans-serif;
-            margin: 20px;
-            line-height: 1.6;
         }
         h2 {
             text-align: center;
-            font-size: 2rem;
-        }
-        p {
-            font-size: 1.2rem;
-        }
-        .editor-container {
-            position: relative;
-            margin-bottom: 30px;
-        }
-        .editor {
-            width: 100%;
-            height: 200px; /* Increased height for better readability */
-            font-size: 16px; /* Scaled up the font size */
-        }
-        .ace_editor {
-            font-size: 16px; /* Ensures Ace Editor text scales with the container */
-        }
-        .copy-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            padding: 8px 12px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-        .copy-btn:hover {
-            background-color: #218838;
         }
     </style>
 </head>
 <body>
+    <p>&nbsp;</p>
     <h2>Bobscort Library Docs</h2>
-
     <p>1. Set up the library</p>
-    <div class="editor-container">
-        <button class="copy-btn" onclick="copyCode('editor1')">Copy</button>
-        <div id="editor1" class="editor">loadstring(game:HttpGet("https://bobscort.vercel.app/bobscortlibrary.lua",true))()</div>
-    </div>
-
+    <pre><code class="language-plaintext">loadstring(game:HttpGet("https://bobscort.vercel.app/bobscortlibrary.lua",true))()</code></pre>
     <p>2. Creating a window/frame</p>
-    <div class="editor-container">
-        <button class="copy-btn" onclick="copyCode('editor2')">Copy</button>
-        <div id="editor2" class="editor">local Frame1 = _G.Main:New("Test")</div>
-    </div>
-
+    <pre><code class="language-plaintext">local Frame1 = _G.Main:New("Test")</code></pre>
     <p>3. Creating a Button</p>
-    <div class="editor-container">
-        <button class="copy-btn" onclick="copyCode('editor3')">Copy</button>
-        <div id="editor3" class="editor">Frame1:Button("Text Button 1", function()\n    print("Hello World!")\nend)</div>
-    </div>
-
+    <pre><code class="language-plaintext">Frame1:Button("Text Button 1", function()
+    print("Hello World!")
+end)</code></pre>
     <p>4. Creating a Toggle</p>
-    <div class="editor-container">
-        <button class="copy-btn" onclick="copyCode('editor4')">Copy</button>
-        <div id="editor4" class="editor">Frame1:Toggle("Toggle Button", false, function(state)\n    print("Toggled State: " .. (state and "On" or "Off"))\nend)</div>
-    </div>
-
+    <pre><code class="language-plaintext">Frame1:Toggle("Toggle Button", false, function(state)
+    print("Toggled State: " .. (state and "On" or "Off"))
+end)</code></pre>
     <p>5. Creating a Slider</p>
-    <div class="editor-container">
-        <button class="copy-btn" onclick="copyCode('editor5')">Copy</button>
-        <div id="editor5" class="editor">Frame1:Slider("Slider", 0, 100, 50, function(value)\n    print("Slider Value: " .. value)\nend)</div>
-    </div>
-
-    <script>
-        // Function to initialize Ace Editor in read-only mode
-        function setupEditor(editorId, language) {
-            const editor = ace.edit(editorId);
-            editor.setTheme("ace/theme/monokai"); // Use Monokai theme
-            editor.session.setMode("ace/mode/" + language);
-            editor.setReadOnly(true); // Makes the editor read-only
-            editor.renderer.setShowGutter(true); // Show line numbers for better clarity
-            editor.setOptions({
-                fontSize: "16px", // Increases text size
-                highlightActiveLine: false,
-                showPrintMargin: false,
-            });
-        }
-
-        // Initialize all editors
-        setupEditor("editor1", "lua");
-        setupEditor("editor2", "lua");
-        setupEditor("editor3", "lua");
-        setupEditor("editor4", "lua");
-        setupEditor("editor5", "lua");
-
-        // Copy code function
-        function copyCode(editorId) {
-            const editor = ace.edit(editorId);
-            const code = editor.getValue();
-            navigator.clipboard.writeText(code).then(() => {
-                alert("Code copied to clipboard!");
-            }).catch(err => {
-                console.error("Failed to copy code: ", err);
-            });
-        }
-    </script>
+    <pre><code class="language-plaintext">Frame1:Slider("Slider", 0, 100, 50, function(value)
+    print("Slider Value: " ..value)
+end)</code></pre>
 </body>
 </html>
